--- a/iphonecalc.html
+++ b/iphonecalc.html
@@ -25,7 +25,7 @@
         >
           AC
         </button>
-        <button class="button button-gray">del</button>
+        <button class="button button-gray">+/-</button>
         <button class="button button-gray">%</button>
         <button class="button button-orange" style="font-size: 23px">÷</button>
         <button class="button">7</button>
